# opal

./: .env.devnet.example  .gitignore  AGENTS.md  Anchor.toml  README.md  bunfig.toml  codama.json  package-lock.json  package.json  plan.md  pr-description.md  tsconfig.json
.superstack/: idea-context.md
client/: submit-llm-resolution.ts
docs/: architecture.md  glossary.md  resolution.md  tokenomics.md
frontend/: .prettierignore  .prettierrc  eslint.config.mjs  package.json
programs/opal/: Cargo.toml
programs/opal/src/: constants.rs  errors.rs  lib.rs  utils.rs
programs/opal/src/instructions/: cast_vote.rs  challenge_llm_resolution.rs  claim_vote_reward.rs  configure_llm_round.rs  create_assertion.rs  decrement.rs  dispute_assertion.rs  finalize_llm_resolution.rs  finalize_undisputed.rs  finalize_vote_resolution.rs  finalize_vote_resolution_placeholder.rs  increment.rs  initialize.rs  initialize_config.rs  initialize_protocol.rs  initialize_protocol_config.rs  mod.rs  open_vote.rs  open_vote_mock.rs  reveal_vote.rs  set_council_feeds.rs  settle_voter.rs  submit_llm_resolution.rs  submit_mock_llm_resolution.rs  undelegate_vote_round.rs
programs/opal/src/state/: assertion.rs  committed_vote.rs  config.rs  counter.rs  dispute.rs  enums.rs  llm_dispute.rs  llm_resolution.rs  llm_resolution_round.rs  mod.rs  protocol_config.rs  resolution.rs  vote_dispute.rs  vote_record.rs  vote_resolution_round.rs
resolver/: server.ts
scripts/: constants.ts  create-test-assertion.ts  feed-init.ts  injection-filter.test.ts  injection-filter.ts  jobs.ts  relayer.ts  (+2 more)
(+135 files in other folders)
