[package]
name = "opal"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "opal"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = [] }
anchor-spl = { version = "0.32.1", features = ["token"] }
bytemuck = { version = "1", features = ["derive"] }
ephemeral-rollups-sdk = { version = "0.8.0", features = ["anchor", "access-control"] }

[dev-dependencies]