[package]
name = "opal"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "opal"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "mock-llm"]
anchor-debug = []
custom-heap = []
custom-panic = []
mock-llm = []

[dependencies]
anchor-lang = { version = "=1.0.1", features = [] }
anchor-spl = { version = "=1.0.1", features = ["token"] }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("solana"))'] }